--- a/index.html
+++ b/index.html
@@ -1,15 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>recipe page</title>
     <link rel="stylesheet" href="./css/main.css">
 
 </head>
+
 <body>
 
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    
+    <div class="cards">
+        <div class="card-image">
+            <img src="./img/top-image.png" alt="Omelette image" class="card-image__photo">
+        </div>
+
+
+        <div class="card-body">
+            <div class="cards-recipe">
+                <h1 class="cards-recipe__headline">Simple Omelette Recipe</h1>
+                <p class="cards-recipe__desc">An easy and quick dish, perfect for any meal. This classic omelette
+                    combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables,
+                    or meats.</p>
+            </div>
+            <div class="preparation-time">
+                <h3 class="preparation-time__title">Preparation time</h3>
+                <ul class="preparation-time__list">
+                    <li class="preparation-time__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
+                            <circle cx="2" cy="2" r="2" fill="#7A284E" />
+                        </svg>
+                        <p class="preparation-time__text">
+                            <span class="preparation-time__span">Total:</span>
+                            Approximately 10 minutes
+                        </p>
+                    </li>
+                    <li class="preparation-time__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
+                            <circle cx="2" cy="2" r="2" fill="#7A284E" />
+                        </svg>
+                        <p class="preparation-time__text">
+                            <span class="preparation-time__span">Preparation:</span>
+                            5 minutes
+                        </p>
+                    </li>
+                    <li class="preparation-time__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
+                            <circle cx="2" cy="2" r="2" fill="#7A284E" />
+                        </svg>
+                        <p class="preparation-time__text">
+                            <span class="preparation-time__span">Cooking:</span>
+                            5 minutes
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="ingredients">
+                <h3 class="ingredients__title">Ingredients</h3>
+                <ul class="ingredients__list">
+                    <li class="ingredients__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
+                            <circle cx="2" cy="2" r="2" fill="#7A284E" />
+                        </svg>
+                        <p class="ingredients__text">
+                            2-3 large eggs
+                        </p>
+                    </li>
+                    <li class="ingredients__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
+                            <circle cx="2" cy="2" r="2" fill="#7A284E" />
+                        </svg>
+                        <p class="ingredients__text">
+                            Salt, to taste
+                        </p>
+                    </li>
+                    <li class="ingredients__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
+                            <circle cx="2" cy="2" r="2" fill="#7A284E" />
+                        </svg>
+                        <p class="ingredients__text">
+                            Pepper, to taste
+                        </p>
+                    </li>
+                    <li class="ingredients__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
+                            <circle cx="2" cy="2" r="2" fill="#7A284E" />
+                        </svg>
+                        <p class="ingredients__text">
+                            1 tablespoon of butter or oil
+                        </p>
+                    </li>
+                    <li class="ingredients__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
+                            <circle cx="2" cy="2" r="2" fill="#7A284E" />
+                        </svg>
+                        <p class="ingredients__text">
+                            Optional fillings: cheese, diced vegetables, cooked meats, herbs
+                        </p>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="site__line"></div>
+
+            <div class="instructions">
+                <h3 class="instructions__title">Instructions</h3>
+                <ul class="instructions__list">
+                    <li class="instructions__item">
+                        <div class="list-number">1.</div>
+                        <p class="instructions__text">
+                            <span class="instructions__span">Beat the eggs:</span>
+                            In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can
+                            add a tablespoon of water or milk for a fluffier texture.
+                        </p>
+                    </li>
+                    <li class="instructions__item">
+                        <div class="list-number">2.</div>
+                        <p class="instructions__text">
+                            <span class="instructions__span">Heat the pan: </span>
+                            Place a non-stick frying pan over medium heat and add butter or oil.
+                        </p>
+                    </li>
+                    <li class="instructions__item">
+                        <div class="list-number">3.</div>
+                        <p class="instructions__text">
+                            <span class="instructions__span">Cook the omelette:</span>
+                            Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                            evenly coat the surface.
+                        </p>
+                    </li>
+                    <li class="instructions__item">
+                        <div class="list-number">4.</div>
+                        <p class="instructions__text">
+                            <span class="instructions__span">Add fillings (optional): </span>
+                            When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle
+                            your chosen fillings over one half of the omelette.
+                        </p>
+                    </li>
+                    <li class="instructions__item">
+                        <div class="list-number">5.</div>
+                        <p class="instructions__text">
+                            <span class="instructions__span">Fold and serve:</span>
+                            As the omelette continues to cook, carefully lift one edge and fold it over the fillings.
+                            Let it cook for another minute, then slide it onto a plate.
+                        </p>
+                    </li>
+                    <li class="instructions__item">
+                        <div class="list-number">6.</div>
+                        <p class="instructions__text">
+                            <span class="instructions__span">Enjoy:</span>
+                            Serve hot, with additional salt and pepper if needed.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="site__line"></div>
+
+            <div class="nutrition">
+                <h3 class="nutrition__title">
+                    Nutrition
+                </h3>
+                <p class="nutrition__description">The table below shows nutritional values per serving without the
+                    additional fillings.
+                </p>
+
+                <div class="nutrition__tables">
+                    <div class="table-info">
+                        <p class="table-tex">Calories</p>
+                        <span class="table-amount">277kcal</span>
+                    </div>
+                    <div class="site__line"></div>
+
+                    <div class="table-info">
+                        <p class="table-tex">Carbs</p>
+                        <span class="table-amount">0g</span>
+                    </div>
+                    <div class="site__line"></div>
+
+                    <div class="table-info">
+                        <p class="table-tex">Protein</p>
+                        <span class="table-amount">20g</span>
+                    </div>
+                    <div class="site__line"></div>
+
+                    <div class="table-info">
+                        <p class="table-tex">Fat</p>
+                        <span class="table-amount">22g</span>
+                    </div>
+                    
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
 </body>
+
 </html>
